--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -5,7 +5,7 @@
   "author": "Clark Hinchcliff",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack --config ./build/webpack.dev.config.js",
+    "dev": "webpack --config ./build/webpack.dev.config.js --mode 'development'",
     "prod": "webpack --config ./build/webpack.dev.config.js"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
+    "source-map-loader": "^0.2.4",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
