--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -16,6 +16,8 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "source-map-loader": "^0.2.4",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
