--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
